syntax = "proto3";

message Notification {
  string message = 1;
}

service NotificationService {
  rpc ReceiveNotification (Notification) returns (Notification);
}
